# fusion-kit

./: CHANGELOG.md  README.md  build-droid-templates.py  publish-factory-droid.sh  pyproject.toml
.droid/: README.md  orchestrate.sh
.droid/agents/: manifest.yaml
.droid/agents/backend-architect/: config.yaml  instructions.md
.droid/status/: backend-architect.json
.factory/commands/: speckit.plan.md
.factory/droids/: backend-architect.md  devops-engineer.md  frontend-developer.md  integration-engineer.md  qa-engineer.md  workflow-specialist.md
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
.specify/memory/: constitution.md
.specify/scripts/bash/: update-agent-context.sh
scripts/powershell/: update-agent-context.ps1
specs/001-multi-agent-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-agent-framework/checklists/: requirements.md
specs/001-multi-agent-framework/contracts/: api-spec.yaml
src/fusion_kit/: __init__.py
src/fusion_kit/api/: __init__.py  main.py  schemas.py  websockets.py
src/fusion_kit/cli/: __init__.py
src/fusion_kit/coordination/: __init__.py
src/fusion_kit/core/: __init__.py
src/fusion_kit/messaging/: __init__.py  channels.py  message.py  message_queue.py
src/fusion_kit/monitoring/: __init__.py
src/fusion_kit/persistence/: __init__.py  init_db.py  models.py  repositories.py
src/fusion_kit/providers/: __init__.py  base.py  registry.py
src/specify_cli/: __init__.py
